soft delete and controller